packages/cb-bsdl-parser/cb_bsdl_parser-0.4.0-py3-none-any.whl/cb_bsdl_parser/CBBsdlParser.py
# Generated from CBBsdl.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CBBsdlParser ( Parser ):

    grammarFileName = "CBBsdl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'entity'", "'end'", "'is'", "'generic'", 
                     "'string'", "'PHYSICAL_PIN_MAP'", "'attribute'", "'BOUNDARY_LENGTH'", 
                     "'BOUNDARY_REGISTER'", "'of'", "'use'", "'constant'", 
                     "'PIN_MAP_STRING'", "'port'", "'inout'", "'in'", "'out'", 
                     "'linkage'", "'bit'", "'bit_vector'", "'to'", "'downto'", 
                     "'.'", "','", "':'", "';'", "'('", "')'", "'&'", "'\"'", 
                     "':='", "'*'", "'_'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "ENTITY", "END", "IS", "GENERIC", "STRING", 
                      "PHYSICAL_PIN_MAP", "ATTRIBUTE", "BS_LEN", "BS_REG", 
                      "OF", "USE", "CONSTANT", "PIN_MAP_STRING", "PORT", 
                      "INOUT", "IN", "OUT", "LINKAGE", "BIT", "BIT_VECTOR", 
                      "TO", "DOWNTO", "DOT", "COMMA", "COLON", "SEMICOLON", 
                      "BRACKET_OPEN", "BRACKET_CLOSE", "AMPERSAND", "QUOTES", 
                      "EQUALS", "ASTERISK", "UNDERLINE", "SQUARE_OPEN", 
                      "SQUARE_CLOSE", "ID", "REAL_LITERAL", "INTEGER", "DIGIT", 
                      "EXPONENT", "WS", "COMMENT" ]

    RULE_bsdl = 0
    RULE_entity = 1
    RULE_entity_name = 2
    RULE_body = 3
    RULE_generic_phys_pin_map = 4
    RULE_phys_pin_map_name = 5
    RULE_attr_bsr_len = 6
    RULE_bsr_len = 7
    RULE_port_dec = 8
    RULE_port_def = 9
    RULE_port_name = 10
    RULE_port_function = 11
    RULE_port_type = 12
    RULE_bit = 13
    RULE_bit_vector = 14
    RULE_pin_map = 15
    RULE_pin_def = 16
    RULE_pin_desc = 17
    RULE_pin_num = 18
    RULE_pin_num_arr = 19
    RULE_attr_bsr = 20
    RULE_bsr_def = 21
    RULE_data_cell = 22
    RULE_bsr_cell0 = 23
    RULE_bsr_cell1 = 24
    RULE_cell_type = 25
    RULE_cell_desc = 26
    RULE_cell_func = 27
    RULE_cell_val = 28
    RULE_ctrl_cell = 29
    RULE_disval = 30
    RULE_bit_range = 31
    RULE_undef_part = 32
    RULE_number = 33
    RULE_identifier = 34
    RULE_comment = 35

    ruleNames =  [ "bsdl", "entity", "entity_name", "body", "generic_phys_pin_map", 
                   "phys_pin_map_name", "attr_bsr_len", "bsr_len", "port_dec", 
                   "port_def", "port_name", "port_function", "port_type", 
                   "bit", "bit_vector", "pin_map", "pin_def", "pin_desc", 
                   "pin_num", "pin_num_arr", "attr_bsr", "bsr_def", "data_cell", 
                   "bsr_cell0", "bsr_cell1", "cell_type", "cell_desc", "cell_func", 
                   "cell_val", "ctrl_cell", "disval", "bit_range", "undef_part", 
                   "number", "identifier", "comment" ]

    EOF = Token.EOF
    ENTITY=1
    END=2
    IS=3
    GENERIC=4
    STRING=5
    PHYSICAL_PIN_MAP=6
    ATTRIBUTE=7
    BS_LEN=8
    BS_REG=9
    OF=10
    USE=11
    CONSTANT=12
    PIN_MAP_STRING=13
    PORT=14
    INOUT=15
    IN=16
    OUT=17
    LINKAGE=18
    BIT=19
    BIT_VECTOR=20
    TO=21
    DOWNTO=22
    DOT=23
    COMMA=24
    COLON=25
    SEMICOLON=26
    BRACKET_OPEN=27
    BRACKET_CLOSE=28
    AMPERSAND=29
    QUOTES=30
    EQUALS=31
    ASTERISK=32
    UNDERLINE=33
    SQUARE_OPEN=34
    SQUARE_CLOSE=35
    ID=36
    REAL_LITERAL=37
    INTEGER=38
    DIGIT=39
    EXPONENT=40
    WS=41
    COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BsdlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entity(self):
            return self.getTypedRuleContext(CBBsdlParser.EntityContext,0)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.CommentContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.CommentContext,i)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_bsdl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBsdl" ):
                listener.enterBsdl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBsdl" ):
                listener.exitBsdl(self)




    def bsdl(self):

        localctx = CBBsdlParser.BsdlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_bsdl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.entity()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42:
                self.state = 73
                self.comment()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTITY(self):
            return self.getToken(CBBsdlParser.ENTITY, 0)

        def entity_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Entity_nameContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Entity_nameContext,i)


        def IS(self):
            return self.getToken(CBBsdlParser.IS, 0)

        def body(self):
            return self.getTypedRuleContext(CBBsdlParser.BodyContext,0)


        def END(self):
            return self.getToken(CBBsdlParser.END, 0)

        def SEMICOLON(self):
            return self.getToken(CBBsdlParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity" ):
                listener.enterEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity" ):
                listener.exitEntity(self)




    def entity(self):

        localctx = CBBsdlParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entity)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(CBBsdlParser.ENTITY)
            self.state = 80
            self.entity_name()
            self.state = 81
            self.match(CBBsdlParser.IS)
            self.state = 82
            self.body()
            self.state = 83
            self.match(CBBsdlParser.END)
            self.state = 84
            self.entity_name()
            self.state = 85
            self.match(CBBsdlParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Entity_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(CBBsdlParser.IdentifierContext,0)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_entity_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity_name" ):
                listener.enterEntity_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity_name" ):
                listener.exitEntity_name(self)




    def entity_name(self):

        localctx = CBBsdlParser.Entity_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_entity_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def generic_phys_pin_map(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Generic_phys_pin_mapContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Generic_phys_pin_mapContext,i)


        def port_dec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Port_decContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Port_decContext,i)


        def pin_map(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Pin_mapContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Pin_mapContext,i)


        def attr_bsr_len(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Attr_bsr_lenContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Attr_bsr_lenContext,i)


        def attr_bsr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Attr_bsrContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Attr_bsrContext,i)


        def undef_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Undef_partContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Undef_partContext,i)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = CBBsdlParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 95
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 89
                        self.generic_phys_pin_map()
                        pass

                    elif la_ == 2:
                        self.state = 90
                        self.port_dec()
                        pass

                    elif la_ == 3:
                        self.state = 91
                        self.pin_map()
                        pass

                    elif la_ == 4:
                        self.state = 92
                        self.attr_bsr_len()
                        pass

                    elif la_ == 5:
                        self.state = 93
                        self.attr_bsr()
                        pass

                    elif la_ == 6:
                        self.state = 94
                        self.undef_part()
                        pass

             
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Generic_phys_pin_mapContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GENERIC(self):
            return self.getToken(CBBsdlParser.GENERIC, 0)

        def BRACKET_OPEN(self):
            return self.getToken(CBBsdlParser.BRACKET_OPEN, 0)

        def PHYSICAL_PIN_MAP(self):
            return self.getToken(CBBsdlParser.PHYSICAL_PIN_MAP, 0)

        def COLON(self):
            return self.getToken(CBBsdlParser.COLON, 0)

        def STRING(self):
            return self.getToken(CBBsdlParser.STRING, 0)

        def EQUALS(self):
            return self.getToken(CBBsdlParser.EQUALS, 0)

        def QUOTES(self, i:int=None):
            if i is None:
                return self.getTokens(CBBsdlParser.QUOTES)
            else:
                return self.getToken(CBBsdlParser.QUOTES, i)

        def phys_pin_map_name(self):
            return self.getTypedRuleContext(CBBsdlParser.Phys_pin_map_nameContext,0)


        def BRACKET_CLOSE(self):
            return self.getToken(CBBsdlParser.BRACKET_CLOSE, 0)

        def SEMICOLON(self):
            return self.getToken(CBBsdlParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_generic_phys_pin_map

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGeneric_phys_pin_map" ):
                listener.enterGeneric_phys_pin_map(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGeneric_phys_pin_map" ):
                listener.exitGeneric_phys_pin_map(self)




    def generic_phys_pin_map(self):

        localctx = CBBsdlParser.Generic_phys_pin_mapContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_generic_phys_pin_map)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(CBBsdlParser.GENERIC)
            self.state = 103
            self.match(CBBsdlParser.BRACKET_OPEN)
            self.state = 104
            self.match(CBBsdlParser.PHYSICAL_PIN_MAP)
            self.state = 105
            self.match(CBBsdlParser.COLON)
            self.state = 106
            self.match(CBBsdlParser.STRING)
            self.state = 107
            self.match(CBBsdlParser.EQUALS)
            self.state = 108
            self.match(CBBsdlParser.QUOTES)
            self.state = 109
            self.phys_pin_map_name()
            self.state = 110
            self.match(CBBsdlParser.QUOTES)
            self.state = 111
            self.match(CBBsdlParser.BRACKET_CLOSE)
            self.state = 112
            self.match(CBBsdlParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Phys_pin_map_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(CBBsdlParser.IdentifierContext,0)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_phys_pin_map_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPhys_pin_map_name" ):
                listener.enterPhys_pin_map_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPhys_pin_map_name" ):
                listener.exitPhys_pin_map_name(self)




    def phys_pin_map_name(self):

        localctx = CBBsdlParser.Phys_pin_map_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_phys_pin_map_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_bsr_lenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATTRIBUTE(self):
            return self.getToken(CBBsdlParser.ATTRIBUTE, 0)

        def BS_LEN(self):
            return self.getToken(CBBsdlParser.BS_LEN, 0)

        def OF(self):
            return self.getToken(CBBsdlParser.OF, 0)

        def entity_name(self):
            return self.getTypedRuleContext(CBBsdlParser.Entity_nameContext,0)


        def COLON(self):
            return self.getToken(CBBsdlParser.COLON, 0)

        def ENTITY(self):
            return self.getToken(CBBsdlParser.ENTITY, 0)

        def IS(self):
            return self.getToken(CBBsdlParser.IS, 0)

        def bsr_len(self):
            return self.getTypedRuleContext(CBBsdlParser.Bsr_lenContext,0)


        def SEMICOLON(self):
            return self.getToken(CBBsdlParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_attr_bsr_len

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_bsr_len" ):
                listener.enterAttr_bsr_len(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_bsr_len" ):
                listener.exitAttr_bsr_len(self)




    def attr_bsr_len(self):

        localctx = CBBsdlParser.Attr_bsr_lenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attr_bsr_len)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(CBBsdlParser.ATTRIBUTE)
            self.state = 117
            self.match(CBBsdlParser.BS_LEN)
            self.state = 118
            self.match(CBBsdlParser.OF)
            self.state = 119
            self.entity_name()
            self.state = 120
            self.match(CBBsdlParser.COLON)
            self.state = 121
            self.match(CBBsdlParser.ENTITY)
            self.state = 122
            self.match(CBBsdlParser.IS)
            self.state = 123
            self.bsr_len()
            self.state = 124
            self.match(CBBsdlParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bsr_lenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(CBBsdlParser.NumberContext,0)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_bsr_len

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBsr_len" ):
                listener.enterBsr_len(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBsr_len" ):
                listener.exitBsr_len(self)




    def bsr_len(self):

        localctx = CBBsdlParser.Bsr_lenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bsr_len)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PORT(self):
            return self.getToken(CBBsdlParser.PORT, 0)

        def BRACKET_OPEN(self):
            return self.getToken(CBBsdlParser.BRACKET_OPEN, 0)

        def BRACKET_CLOSE(self):
            return self.getToken(CBBsdlParser.BRACKET_CLOSE, 0)

        def SEMICOLON(self):
            return self.getToken(CBBsdlParser.SEMICOLON, 0)

        def port_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CBBsdlParser.Port_defContext)
            else:
                return self.getTypedRuleContext(CBBsdlParser.Port_defContext,i)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_port_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_dec" ):
                listener.enterPort_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_dec" ):
                listener.exitPort_dec(self)




    def port_dec(self):

        localctx = CBBsdlParser.Port_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_port_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(CBBsdlParser.PORT)
            self.state = 129
            self.match(CBBsdlParser.BRACKET_OPEN)
            self.state = 131 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self.port_def()
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==36):
                    break

            self.state = 135
            self.match(CBBsdlParser.BRACKET_CLOSE)
            self.state = 136
            self.match(CBBsdlParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def port_name(self):
            return self.getTypedRuleContext(CBBsdlParser.Port_nameContext,0)


        def COLON(self):
            return self.getToken(CBBsdlParser.COLON, 0)

        def port_function(self):
            return self.getTypedRuleContext(CBBsdlParser.Port_functionContext,0)


        def port_type(self):
            return self.getTypedRuleContext(CBBsdlParser.Port_typeContext,0)


        def SEMICOLON(self):
            return self.getToken(CBBsdlParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_port_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_def" ):
                listener.enterPort_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_def" ):
                listener.exitPort_def(self)




    def port_def(self):

        localctx = CBBsdlParser.Port_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_port_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.port_name()
            self.state = 139
            self.match(CBBsdlParser.COLON)
            self.state = 140
            self.port_function()
            self.state = 141
            self.port_type()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 142
                self.match(CBBsdlParser.SEMICOLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(CBBsdlParser.IdentifierContext,0)


        def getRuleIndex(self):
            return CBBsdlParser.RULE_port_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_name" ):
                listener.enterPort_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_name" ):
                listener.exitPort_name(self)




    def port_name(self):

        localctx = CBBsdlParser.Port_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_port_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INOUT(self):
            return self.getToken(CBBsdlParser.INOUT, 0)

        def IN(self):
            return self.getToken(CBBsdlParser.IN, 0)

        def OUT(self):
            return self.getToken(CBBsdlParser.OUT, 0)

        def LINKAGE(self):
            return self.getToken(CBBsdlParser.LINKAGE, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_port_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_function" ):
                listener.enterPort_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_function" ):
                listener.exitPort_function(self)




    def port_function(self):

        localctx = CBBsdlParser.Port_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_port_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Port_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bit(self):
            return self.getTypedRuleContext(CBBsdlParser.BitContext,0)


        def bit_vector(self):
            return self.getTypedRuleContext(CBBsdlParser.Bit_vectorContext,0)


        def ID(self):
            return self.getToken(CBBsdlParser.ID, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_port_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPort_type" ):
                listener.enterPort_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPort_type" ):
                listener.exitPort_type(self)




    def port_type(self):

        localctx = CBBsdlParser.Port_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_port_type)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.bit()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.bit_vector()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.match(CBBsdlParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BIT(self):
            return self.getToken(CBBsdlParser.BIT, 0)

        def getRuleIndex(self):
            return CBBsdlParser.RULE_bit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBit" ):
                listener.enterBit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBit" ):
                listener.exitBit(self)




    def bit(self):

        localctx = CBBsdlParser.BitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_bit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(CBBsdlParser.BIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bit_vectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BIT_VECTOR(self):
            return self.getToken(CBBsdlParser.BIT_VECTOR, 0)

        def BRACKET_OPEN(self):
            return self.getToken(CBBsdlParser.BRACKET_OPEN, 0)

        def bit_range(self):
            return self.getTypedRuleContext(CBBsdlParser.Bit_rangeContext,0)


        def BRACKET_CLOSE(self):
            return self.getToken(CBBsdlParser.BRACKET_CLOSE, 0)
